--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "allex_usersservice",
-  "version": "0.1.2",
-  "description": "UsersService",
+  "name": "allex_hotelservice",
+  "version": "1.0.0",
+  "description": "HotelService",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.hers.rs:allex_services/users.git"
+    "url": "git@gitlab.hers.rs:allex_services/hotel.git"
   },
   "keywords": [
     "ecosystem:allex",
     "Service",
-    "Users"
+    "Hotel"
   ],
   "author": "HERS Belgrade",
   "license": "ISC"
