--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.hers.rs:allex_services/hotel.git"
+    "url": "git@github.com:allex-services/hotel.git"
   },
   "keywords": [
     "ecosystem:allex",
@@ -18,4 +18,3 @@
   "author": "HERS Belgrade",
   "license": "ISC"
 }
-
